[package]
name = "my_im"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]] # 用来运行 HelloWorld1 gRPC 服务器的可执行文件
name = "services-server"
path = "src/services-server.rs"

[[bin]] # 用来运行 HelloWorld gRPC 客户端的可执行文件
name = "ws-servers"
path = "src/ws-servers.rs"
[[bin]]
name = "push-servers"
path = "src/push-servers.rs"
[[bin]]
name = "producer"
path = "src/kafka-test/producer.rs"

[[bin]]
name = "consumer"
path = "src/kafka-test/consumer.rs"

[dependencies]
http = "0.2.12"
tower = { version = "0.4.13", features = ["full"] }
tower-http = "0.5.2"
bb8 = "0.8.3"
bb8-redis = "0.15.0"
futures-util = "0.3.30"
log = "0.4.21"
pretty_env_logger = "0.5.0"
prost = "0.12.4"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde_json = "1.0.116"
tokio-tungstenite = "0.21.0"
tonic = "0.11.0"
chrono = "0.4.38"

[dependencies.tokio]
version = "1.37"
features = ["full"]

[dependencies.warp]
version = "0.3.7"
features = ["tls"]

[dependencies.reqwest]
version = "0.12.4"
features = ["json"]

[dependencies.serde]
version = "1.0.200"
features = ["derive"]

[dependencies.uuid]
version = "1.8.0"
features = ["v4", "fast-rng", "macro-diagnostics"]
[build-dependencies]
tonic-build = "0.11"
